# saas-metering-engine

./: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  IMPLEMENTATION_JOURNEY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: c0581a029088_initial.py
backend/app/: main.py
backend/app/api/: deps.py  health.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: login.py  users.py  widgets.py
backend/app/core/: config.py  db.py  logging.py  metering.py  security.py
backend/app/db/: init_db.py
backend/app/models/: all_models.py
backend/app/schemas/: __init__.py  user.py
backend/tests/: conftest.py
backend/tests/api/api_v1/: test_integration.py
backend/tests/core/: test_metering.py
scripts/: benchmark.py  check_usage.py  debug_hash.py  init_local.ps1  update_quota.py  verify_local.py
